# automatizador-legal

./: .gitignore  Automatización judicial n8n.json  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
app/: automatization.py  email.py  process_excel.py
artifacts/: 20251223-015422_flow_timeout.html  20251223-015422_flow_timeout.url.txt
complements/: host_cdp_forward.py  run_browser.py
