[project]
name = "automatizador-legal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "browserbase>=1.4.0",
    "fastapi[standard]>=0.126.0",
    "openpyxl>=3.1.5",
    "playwright>=1.57.0",
    "playwright-stealth>=2.0.0",
    "pydantic>=2.12.5",
    "pydrive2>=1.21.3",
]
